fixed position error in dark mode for articles sorting context sprcific nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,8 @@ select:focus {
   background-color: white;
 }
 .ArticleOptionsNavbar-grid-container-dark {
-  position: fixed;
-  top:5%;
+  position: sticky;
+  top:0%;
   /* background-color: white; */
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
